# renfield-mcp-calendar

./: .gitignore  README.md  pyproject.toml
src/renfield_mcp_calendar/: __init__.py  __main__.py  config.py  server.py
src/renfield_mcp_calendar/backends/: base.py  caldav_backend.py  ews.py  google.py
tests/: test_server.py
